fix: improve navbar responsiveness on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,9 +34,3 @@ body {
 *::after {
   box-sizing: border-box;
 }
-
-@media (max-width: 576px) {
-  header {
-    max-width: 365px;
-  }
-}
